Dodanie integracji CSRF

--- a/src/uwsgi/app/templates/add.html
+++ b/src/uwsgi/app/templates/add.html
@@ -13,9 +13,10 @@
 <body class="text-center">
 <div class="container">
     <div class="row float-right">
-        <a class="btn btn-primary mx-2" href="/list/">Home</a>
+        <a class="btn btn-primary mx-2" href="/user/">Home</a>
         <a class="btn btn-primary mx-2" href="/note/">New note</a>
         <form method="post" action="https://localhost/logout/">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <input type="submit" class="btn btn-primary mx-2" value="Log out">
         </form>
     </div>
@@ -27,6 +28,7 @@
                 <textarea class="form-control my-3" rows="5" minlength="1" maxlength="1000" name="body"
                           id="body"></textarea>
                 <input type="password" class="form-control my-3" placeholder="Password" name="password" id="password">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <input type="submit" id="saveBtn" class="btn btn-primary my-2" value="Save"><br>
                 <label>If you don't enter password your note will be unencrypted and will be visible for
                     everyone.</label>
@@ -39,6 +41,7 @@
             <form id="file-form">
                 <h3>New file</h3>
                 <input type="file" class="form-control-file" id="file" name="file" accept="application/pdf, image/jpeg, image/png, .txt">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <input type="submit" id="saveFileBtn" class="btn btn-primary my-2" value="Save">
             </form>
             <div class="alert alert-danger" role="alert" id="alertFile">
