--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -21,6 +21,7 @@
                        autofocus>
                 <input type="password" id="inputPasswordS" class="form-control my-1" name="password"
                        placeholder="Password" required>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             </form>
             <input class="btn btn-lg btn-primary" type="button" id="loginBtn" value="Sign in">
             <div class="alert alert-danger" role="alert" id="alertLogin">
@@ -39,6 +40,7 @@
                        required>
                 <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password"
                        name="password" required>
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <div class="progress my-2">
                     <div class="progress-bar" id="progressbar" role="progressbar" aria-valuenow="25"
                          aria-valuemin="0" aria-valuemax="100">
